--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <title>Minecraft Cracked Online - McCrOe.com</title>
     <h1>These are the Free Minecraft Online.</h1>
     <h10>This Website is not Affilated with Mojang AB.</h10>
-    <button onclick="location.href='https://eaglercraft.com/mc/1.8.8'">EaglerCraftX (Minecraft 1.8.8)</button>
-    <button onclick="location.href='https://eaglercraft.com/mc/1.5.2'">EaglerCraft (Minecraft 1.5.2)</button>
-    <button onclick="location.href='https://eaglercraft.com/mc/a1.2.6'">EaglerCraft (Minecraft Alpha 1.2.6)</button>
+    <button onclick="location.href='https://eaglercraft.com/mc/1.8.8/'">EaglerCraftX (Minecraft 1.8.8)</button>
+    <button onclick="location.href='https://eaglercraft.com/mc/1.5.2/'">EaglerCraft (Minecraft 1.5.2)</button>
+    <button onclick="location.href='https://eaglercraft.com/mc/a1.2.6/'">EaglerCraft (Minecraft Alpha 1.2.6)</button>
     <button onclick="location.href='https://eaglercraft.com/mc/b1.3/'">EaglerCraft (Minecraft Beta 1.3)</button>
-    <button onclick="location.href='https://eaglercraft.com/mc/invdev'">EaglerCraft (Minecraft Invdev)</button>
+    <button onclick="location.href='https://eaglercraft.com/mc/indev/'">EaglerCraft (Minecraft Invdev)</button>
     <button onclick="location.href='./Proty'" hidden="true">Prototype (Working)</button>
 </html>
