--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <button onclick="location.href='https://eaglercraft.com/mc/1.5.2/'">EaglerCraft (Minecraft 1.5.2)</button>
     <button onclick="location.href='https://eaglercraft.com/mc/a1.2.6/'">EaglerCraft (Minecraft Alpha 1.2.6)</button>
     <button onclick="location.href='https://eaglercraft.com/mc/b1.3/'">EaglerCraft (Minecraft Beta 1.3)</button>
-    <button onclick="location.href='https://peytonplayz595.github.io/Minecraft-Indev-WebGL/js/'">EaglerCraft (Minecraft Invdev)</button>
+    <button onclick="location.href='https://eaglercraft.com/mc/indev/'">EaglerCraft (Minecraft Indev)</button>
     <button onclick="location.href='./Proty'" hidden="true">Prototype (Working)</button>
 </html>
