--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <button onclick="location.href='https://eaglercraft.com/mc/a1.2.6/'">EaglerCraft (Minecraft Alpha 1.2.6)</button>
     <button onclick="location.href='https://eaglercraft.com/mc/b1.3/'">EaglerCraft (Minecraft Beta 1.3)</button>
     <button onclick="location.href='https://eaglercraft.com/mc/indev/'">EaglerCraft (Minecraft Indev)</button>
+    <button onclick="location.href='https://freedns.afraid.org'">Free website! Free DNS!</button>
     <button onclick="location.href='./Proty'" hidden="true">Prototype (Working)</button>
 </html>
